--- a/index.html
+++ b/index.html
@@ -224,32 +224,59 @@
                             </p>
                         </div>
 
-                        <div className="mb-10">
-                            <h3 className="text-2xl md:text-4xl font-bold text-center text-white mb-8">
+                        <div className="mb-12">
+                            <h3 className="text-2xl md:text-4xl font-bold text-center text-white mb-3">
                                 Un voyage dans le temps
                             </h3>
-                            <div className="relative">
-                                <div className="hidden md:block absolute left-8 right-8 top-5 h-[2px] bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500"></div>
-                                <div className="flex gap-5 overflow-x-auto pb-4 snap-x snap-mandatory">
-                                    {milestones.map((item, idx) => (
-                                        <motion.div
-                                            key={idx}
-                                            initial={{ opacity: 0, y: 30 }}
-                                            whileInView={{ opacity: 1, y: 0 }}
-                                            transition={{ duration: 0.5, delay: idx * 0.08 }}
-                                            viewport={{ once: true, margin: "-80px" }}
-                                            className="snap-start min-w-[260px] md:min-w-0 md:flex-1"
-                                        >
-                                            <div className="flex items-center gap-3 mb-3">
-                                                <div className="w-4 h-4 rounded-full bg-white border-4 border-pink-500 shadow-[0_0_12px_rgba(236,72,153,0.8)]"></div>
-                                                <span className="text-pink-400 font-mono font-bold text-lg">{item.year}</span>
-                                            </div>
-                                            <Card className="p-5 h-full border-white/15 hover:border-pink-500/50">
-                                                <h4 className="text-white font-bold mb-2">{item.title}</h4>
-                                                <p className="text-gray-400 text-sm">{item.desc}</p>
-                                            </Card>
-                                        </motion.div>
-                                    ))}
+                            <p className="text-center text-gray-400 max-w-3xl mx-auto mb-8">
+                                Les grandes étapes qui ont construit l'IA moderne, de l'idée fondatrice à l'usage quotidien.
+                            </p>
+
+                            <div className="md:hidden relative pl-6 space-y-4">
+                                <div className="absolute left-1.5 top-2 bottom-2 w-[2px] bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500"></div>
+                                {milestones.map((item, idx) => (
+                                    <motion.div
+                                        key={idx}
+                                        initial={{ opacity: 0, y: 20 }}
+                                        whileInView={{ opacity: 1, y: 0 }}
+                                        transition={{ duration: 0.4, delay: idx * 0.06 }}
+                                        viewport={{ once: true, margin: "-60px" }}
+                                        className="relative"
+                                    >
+                                        <div className="absolute -left-[1.05rem] top-5 w-3 h-3 rounded-full bg-white border-2 border-pink-500 shadow-[0_0_10px_rgba(236,72,153,0.7)]"></div>
+                                        <div className="rounded-2xl border border-white/15 bg-gray-900/70 p-4">
+                                            <p className="text-pink-300 font-mono font-bold text-sm">{item.year}</p>
+                                            <h4 className="text-white font-semibold mt-1 mb-1">{item.title}</h4>
+                                            <p className="text-gray-400 text-sm leading-relaxed">{item.desc}</p>
+                                        </div>
+                                    </motion.div>
+                                ))}
+                            </div>
+
+                            <div className="hidden md:block rounded-2xl border border-white/10 bg-white/[0.03] p-6">
+                                <div className="relative">
+                                    <div className="absolute left-10 right-10 top-8 h-[2px] bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500"></div>
+                                    <div className="grid grid-cols-5 gap-4">
+                                        {milestones.map((item, idx) => (
+                                            <motion.div
+                                                key={idx}
+                                                initial={{ opacity: 0, y: 20 }}
+                                                whileInView={{ opacity: 1, y: 0 }}
+                                                transition={{ duration: 0.45, delay: idx * 0.06 }}
+                                                viewport={{ once: true, margin: "-80px" }}
+                                                className="relative"
+                                            >
+                                                <div className="flex flex-col items-center mb-4">
+                                                    <p className="text-pink-300 font-mono font-bold text-sm">{item.year}</p>
+                                                    <div className="mt-2 w-3 h-3 rounded-full bg-white border-2 border-pink-500 shadow-[0_0_10px_rgba(236,72,153,0.7)]"></div>
+                                                </div>
+                                                <div className="rounded-xl border border-white/15 bg-gray-900/70 p-4 min-h-[160px]">
+                                                    <h4 className="text-white font-semibold mb-2 text-sm">{item.title}</h4>
+                                                    <p className="text-gray-400 text-sm leading-relaxed">{item.desc}</p>
+                                                </div>
+                                            </motion.div>
+                                        ))}
+                                    </div>
                                 </div>
                             </div>
                         </div>
