--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             { id: "human-center", label: "Humain au centre" },
             { id: "energy-geo", label: "Énergie & géopolitique" },
             { id: "regulation", label: "Régulation" },
+            { id: "ai-environment", label: "IA & environnement" },
             { id: "next-steps", label: "Prochaines étapes" },
             { id: "conclusion", label: "Conclusion" }
         ];
@@ -1475,6 +1476,69 @@
             </Section>
         );
 
+        const EnvironmentBalance = () => (
+            <Section id="ai-environment" className="bg-slate-950/80">
+                <div className="max-w-6xl w-full">
+                    <div className="text-center max-w-5xl mx-auto mb-10">
+                        <div className="inline-flex items-center gap-2 px-4 py-1 rounded-full bg-emerald-500/10 border border-emerald-500/30 text-emerald-200 text-xs uppercase tracking-wider mb-4">
+                            <Leaf size={14} /> Écologie IA
+                        </div>
+                        <h2 className="text-3xl md:text-5xl font-bold text-white mb-4">
+                            L'IA et l'environnement : réconcilier innovation et écologie
+                        </h2>
+                        <p className="text-gray-300 leading-relaxed">
+                            Nous avons évoqué plus tôt la consommation énergétique colossale de l'IA. Mais le tableau est plus nuancé qu'il n'y paraît. L'IA peut être à la fois un problème environnemental et une partie de la solution.
+                        </p>
+                    </div>
+
+                    <div className="grid md:grid-cols-2 gap-6 mb-8">
+                        <Card className="border-red-500/20 bg-red-500/5">
+                            <h3 className="text-2xl font-bold text-white mb-4">L'IA comme problème</h3>
+                            <ul className="space-y-2 text-gray-300 text-sm leading-relaxed">
+                                <li>• <strong className="text-white">Entraînement gourmand :</strong> des mois de calculs intensifs pour chaque nouveau modèle majeur.</li>
+                                <li>• <strong className="text-white">Inférence cumulative :</strong> millions de requêtes quotidiennes qui s'additionnent.</li>
+                                <li>• <strong className="text-white">Refroidissement des data centers :</strong> climatisation massive 24/7.</li>
+                                <li>• <strong className="text-white">Obsolescence rapide :</strong> course au modèle le plus récent = déchets électroniques.</li>
+                                <li>• <strong className="text-white">Consommation d'eau :</strong> les data centers utilisent l'eau pour le refroidissement.</li>
+                            </ul>
+                        </Card>
+
+                        <Card className="border-emerald-500/20 bg-emerald-500/5" delay={0.1}>
+                            <h3 className="text-2xl font-bold text-white mb-4">L'IA comme solution</h3>
+                            <ul className="space-y-2 text-gray-300 text-sm leading-relaxed">
+                                <li>• <strong className="text-white">Optimisation énergétique :</strong> réseaux électriques intelligents, réduction du gaspillage.</li>
+                                <li>• <strong className="text-white">Agriculture de précision :</strong> irrigation optimisée, pesticides ciblés, rendements améliorés.</li>
+                                <li>• <strong className="text-white">Prédiction climatique :</strong> modèles météo plus précis, anticipation des catastrophes.</li>
+                                <li>• <strong className="text-white">Mobilité optimisée :</strong> réduction des embouteillages, logistique efficiente.</li>
+                                <li>• <strong className="text-white">Matériaux durables :</strong> conception assistée de nouvelles molécules écologiques.</li>
+                            </ul>
+                        </Card>
+                    </div>
+
+                    <div className="grid sm:grid-cols-3 gap-4 mb-8">
+                        <Card className="p-5 border-blue-500/20 text-center">
+                            <p className="text-3xl font-bold text-blue-300">4%</p>
+                            <p className="text-xs text-gray-300 mt-2">Part de l'IA dans la consommation énergétique mondiale (2024)</p>
+                        </Card>
+                        <Card className="p-5 border-yellow-500/20 text-center" delay={0.05}>
+                            <p className="text-3xl font-bold text-yellow-300">15%</p>
+                            <p className="text-xs text-gray-300 mt-2">Projection pour 2030 si la tendance actuelle se poursuit</p>
+                        </Card>
+                        <Card className="p-5 border-emerald-500/20 text-center" delay={0.1}>
+                            <p className="text-3xl font-bold text-emerald-300">20%</p>
+                            <p className="text-xs text-gray-300 mt-2">Potentiel de réduction d'émissions via des optimisations IA ciblées</p>
+                        </Card>
+                    </div>
+
+                    <Card className="border-cyan-500/30 bg-cyan-500/10">
+                        <p className="text-gray-200 leading-relaxed">
+                            Le paradoxe est fascinant : l'IA consomme énormément, mais pourrait nous aider à consommer moins ailleurs. La clé réside dans un usage intentionnel et stratégique : privilégier les applications à fort impact positif (santé, éducation, climat) plutôt que les gadgets futiles. Chaque watt dépensé devrait générer une valeur réelle.
+                        </p>
+                    </Card>
+                </div>
+            </Section>
+        );
+
         const NextSteps = () => {
             const steps = [
                 { n: "01", title: "Choisir un outil", desc: "Testez ChatGPT, Claude ou Gemini avec 10 questions concrètes." },
@@ -1886,6 +1950,7 @@
                     <DynamicNewsSection />
                     <Consumption />
                     <RegulationBalance />
+                    <EnvironmentBalance />
                     <NextSteps />
                     <Conclusion />
                     <div className="fixed inset-0 pointer-events-none z-0 opacity-[0.03]" style={{ backgroundImage: 'url("data:image/svg+xml,%3Csvg width=\'60\' height=\'60\' viewBox=\'0 0 60 60\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'none\' fill-rule=\'evenodd\'%3E%3Cg fill=\'%23ffffff\' fill-opacity=\'1\'%3E%3Cpath d=\'M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z\'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E")' }}></div>
