--- a/index.html
+++ b/index.html
@@ -1400,6 +1400,64 @@
                         </p>
                     </div>
 
+                    <Card className="mb-8 border-cyan-500/30 bg-cyan-500/10">
+                        <h3 className="text-2xl font-bold text-white mb-3">
+                            Souveraineté numérique : l'Europe peut-elle exister dans l'IA ?
+                        </h3>
+                        <p className="text-gray-200 text-sm leading-relaxed">
+                            La bataille de l'intelligence artificielle est aussi une bataille géopolitique. Qui contrôle l'IA contrôle une partie de l'avenir économique et stratégique. Où se situe l'Europe, et particulièrement la France, dans cette compétition mondiale ?
+                        </p>
+                    </Card>
+
+                    <div className="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
+                        <Card className="p-5 border-blue-500/20">
+                            <h4 className="font-bold text-white mb-2">États-Unis</h4>
+                            <p className="text-gray-400 text-sm">Domination des GAFAM + startups (OpenAI, Anthropic...).</p>
+                        </Card>
+                        <Card className="p-5 border-red-500/20" delay={0.05}>
+                            <h4 className="font-bold text-white mb-2">Chine</h4>
+                            <p className="text-gray-400 text-sm">Investissements massifs d'État + géants locaux (Baidu, Alibaba...).</p>
+                        </Card>
+                        <Card className="p-5 border-emerald-500/20" delay={0.1}>
+                            <h4 className="font-bold text-white mb-2">Europe</h4>
+                            <p className="text-gray-400 text-sm">Moins de champions tech, mais leadership réglementaire et éthique.</p>
+                        </Card>
+                        <Card className="p-5 border-gray-500/20" delay={0.15}>
+                            <h4 className="font-bold text-white mb-2">Reste du monde</h4>
+                            <p className="text-gray-400 text-sm">Utilisateurs des technologies développées ailleurs.</p>
+                        </Card>
+                    </div>
+
+                    <div className="grid md:grid-cols-3 gap-4 mb-8">
+                        <Card className="p-5 border-indigo-500/20">
+                            <h4 className="font-bold text-white mb-2">Excellence scientifique</h4>
+                            <p className="text-gray-400 text-sm">
+                                Chercheurs de pointe, publications influentes, innovations fondamentales. DeepMind (acquis par Google) était britannique.
+                            </p>
+                        </Card>
+                        <Card className="p-5 border-purple-500/20" delay={0.05}>
+                            <h4 className="font-bold text-white mb-2">Vision éthique</h4>
+                            <p className="text-gray-400 text-sm">
+                                RGPD, AI Act européen : nous définissons des normes mondiales de protection des données et d'éthique de l'IA.
+                            </p>
+                        </Card>
+                        <Card className="p-5 border-cyan-500/20" delay={0.1}>
+                            <h4 className="font-bold text-white mb-2">Marchés sophistiqués</h4>
+                            <p className="text-gray-400 text-sm">
+                                450 millions de consommateurs exigeants, un terrain de test premium pour les innovations.
+                            </p>
+                        </Card>
+                    </div>
+
+                    <Card className="mb-10 border-blue-500/30 bg-blue-500/10">
+                        <p className="text-blue-200 text-xl italic mb-3">
+                            "Nous pouvons devenir la référence mondiale de l'IA éthique et responsable."
+                        </p>
+                        <p className="text-gray-300 text-sm leading-relaxed">
+                            La course à la puissance brute est peut-être perdue face aux géants américains et chinois. Mais la course à l'IA de confiance, à l'IA responsable, à l'IA au service de l'humain : c'est là que l'Europe peut exceller et définir les standards du futur. Notre "retard" technologique peut devenir un avantage si nous construisons différemment, avec nos valeurs au cœur du système.
+                        </p>
+                    </Card>
+
                     <div className="grid md:grid-cols-2 lg:grid-cols-4 gap-4 mb-10">
                         <Card className="p-5 border-blue-500/20">
                             <p className="text-blue-300 font-mono text-xs mb-2">ENJEU 01</p>
